# Coordinator

./: Coordinator.cpp  Coordinator.sln  Coordinator.vcxproj  Coordinator.vcxproj.filters
LinesMeasurerLibrary/: CMakeLists.txt  LinesMeasurerLibrary.vcxproj  detect-lines.cpp  detect-lines.h  tswdft2d.h
